# esp32-c6-agentic-firmware

./: .gitmodules  APPROACH.md  CLAUDE.md  CURRICULUM_STATUS.md  QUICKSTART.md  README.md  SUMMARY.md  read_serial.py  repo-review-2025-11-14.md
.claude/: TEST.md.template  TESTING-GUIDE.md  test-lesson-improvements.md
.claude/commands/: esp32-debug.md  gen-all-lessons.md  gen-lesson.md  improve-command.md  review-repo.md  setup-hardware-lesson.md  test-gdb-lesson.md  test-lesson.md  test-uart-pins.md
.claude/templates/: flash_no_tty.sh  read_uart.py  test-all-lessons-reliable.sh  test-single-lesson-reliable.sh  uart_test_minimal.rs  verify-test-environment.sh
docs/: LESSON_PLAN.md  testing-strategy.md
docs/prd/: lesson-04-statig-color-navigator-prd.md  lesson-05-unit-and-integration-testing-prd.md
lessons-backup/01-blinky/: README.md
lessons-backup/01-blinky/.cargo/: config.toml
lessons-backup/02-simple-tasks/: Cargo.toml  README.md
lessons-backup/02-simple-tasks/src/: lib.rs
lessons/01-blinky/: Cargo.toml  README.md
lessons/01-blinky/.cargo/: config.toml
lessons/01-blinky/src/: main.rs
lessons/01-gpio-gdb-basics/: Cargo.toml  README.md
lessons/01-gpio-gdb-basics/.cargo/: config.toml
lessons/02-debugger/: Cargo.toml  README.md
lessons/02-debugger/.cargo/: config.toml
lessons/02-simple-tasks/src/: scheduler.rs  tasks.rs
lessons/02-task-scheduler/: README.md
lessons/02-task-scheduler/src/: button.rs
lessons/02-uart-cli-streaming/: Cargo.toml  README.md  rust-toolchain.toml
lessons/03-pwm-neopixel/: Cargo.toml  README.md
lessons/03-pwm-neopixel/.cargo/: config.toml
lessons/04-mpu6050-state-machine/: Cargo.toml  README.md
lessons/04-statig-color-navigator/: Cargo.toml
lessons/05-posture-monitor/: Cargo.toml  README.md
lessons/05-posture-monitor/src/: lib.rs
lessons/05-unit-and-integration-testing/: Cargo.toml  README.md
lessons/05-unit-and-integration-testing/src/: lib.rs
lessons/07-gdb-debugging/: README.md
lessons/08-defmt-rtt-logging/: Cargo.toml
lessons/08-uart-gdb-tandem/: Cargo.toml
lessons/09-rtt-exploration/: ADS1015_DATA_DRIVEN_DEVELOPMENT.md  README.md
scripts/: clean-targets.sh  cleanup-all.sh  find-esp32-ports.sh  monitor.py  remote-build-flash.sh  test-uart-pins.sh
test1/: Cargo.toml
