[package]
name = "blinky"
version = "0.1.0"
authors = ["Shane Mattner"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.18", features = ["esp32c6", "panic-handler", "println"] }
esp-hal = { version = "1.0.0", features = ["esp32c6", "rt", "unstable", "log-04"] }
esp-println = { version = "0.16", features = ["esp32c6", "log-04"] }
log = "0.4.22"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
