[package]
name = "lesson-02-uart-cli-streaming"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32c6", "log"] }
esp-backtrace = { version = "0.15.0", features = [
    "esp32c6",
    "panic-handler",
    "println",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
log = "0.4"
heapless = "0.8"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
