[package]
name = "lesson-04-mpu6050-state-machine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable"] }
esp-hal-smartled2 = { version = "0.26", features = ["esp32c6"] }
esp-println = { version = "0.13.0", features = ["esp32c6", "log"] }
esp-backtrace = { version = "0.15.0", features = ["esp32c6", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
log = "0.4"
heapless = "0.8"
smart-leds = "0.4"
critical-section = "1.2.0"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
