[package]
name = "lesson-05-unit-and-integration-testing"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[dependencies]
# No dependencies - pure functions only

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
